POS: restock out-of-stock items during billing; bill PDF redesign + IST times
- Out-of-stock product in POS now prompts for new stock, updates it
  (server or offline queue) and continues into the cart
- Bill PDF: green branded header with shop address/phone, labeled bill
  meta, shaded item table header, You Save highlight, boxed total,
  collapsed duplicate customer names
- Bill date/printed times converted from server UTC to IST

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>